assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Raleway:ital,wght@1,300&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
}

body {
    font-family: 'Raleway', sans-serif;
    font-weight: 300;
    font-size: 110%;
    color: #050505;
}

/* Headings and Logo */

h1, h2 {
    font-family: 'Orbitron', sans-serif;
    text-transform: uppercase;
    letter-spacing: 2px;
    color: #ED1C24;
    text-align: center;
    padding: 10px;
}

#logo {
    font-size: 280%;
    text-decoration: underline;
}

#menu {
    width: 100%;
    height: 100px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.section-heading {
    text-decoration: underline;
}

.menu-select {
    font-size: 150%;
    text-decoration: none;
    color: inherit;
    margin: 0 10px;
}

.menu-select:hover {
    border-bottom: 1px solid #ED1C24;
    font-size: 180%;
}

.active {
    border-bottom: 1px solid #ED1C24;
    color: #ED1C24;
}

/* Treadmil Image & cover text */

#treadmil-outer {
    height: 800px;
    width: 100%;
    overflow: hidden;
}

#cover-text h2 {
    color: #ED1C24;
    text-decoration: underline;
    letter-spacing: 5px;
}

#treadmil-image {
    height: 800px;
    width: 100%;
    padding-top: 10px;
    background: url(../images/man-on-treadmil.jpg) no-repeat center center;
    background-size: cover;
}

#cover-text {
    font-size: 120%;
    font-family: 'Orbitron', sans-serif;
    text-transform: uppercase;
    letter-spacing: 5px;
    text-align: center;

    width: 300px;
    height: 300px;

    bottom: 500px;
    left: 42%;

    background-color: rgba(255, 255, 255, 0.7);
    
    position: absolute;

    /* Animation zoom effect on text */
    animation-name: text-zoom;
    animation-duration: 5s;
    animation-fill-mode: forwards;
}

/* Creation of level of zoom */
@keyframes text-zoom {
    from{
        transform: scale(1);
    }
    to{
        transform: scale(1.1);
    }
}

#cover-text h2, h3 {
    padding: 20px;
}

/* Benefits section with photos */

#benefits-wrap {
    display: grid;
    padding: 2rem;
    grid-template-columns: 40% 40%;
    grid-template-rows: 300px;
    gap: 1rem;
    align-items: center;
    max-width: 80%;
    margin: 0 auto;
    justify-content: center;
    justify-items: center;
}

#benefits-wrap img {
    max-width: 100%;
    height: auto;
    max-height: 300px;
}

#benefits-wrap h3 {
    text-align: center;
    color: #ED1C24;
}

#benefits-wrap p {
    text-align: center;
    padding: 20px;
}

/* Classes section */

#classes {
    background-image: url(../images/gym-ropes.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    height: 300px;
    width: 100%;
    overflow: hidden;
}

#classes div {
    color: white;
    background-color: rgba(0, 0, 0, .6);
    width: 16.666%;
    height: 300px;
    float: left;
    text-align: center;
    letter-spacing: 1px;
    border: 2px solid white;
    box-sizing: border-box;
    padding: 60px;
}

#classes h3 {
    color: #ED1C24;
    text-decoration: underline;
}

/* About us section */

#about-us {
    background-image: url(../images/solo-deadlift.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    height: 300px;
    width: 100%;
    overflow: hidden;
    }

#times {
    float: left;
    text-align: left;
    letter-spacing: 1px;
    padding-left: 30px;
    padding-top: 30px;
    color: white;
}

#find {
    float: right;
    text-align: right;
    letter-spacing: 1px;
    padding-right: 30px;
    padding-top: 30px;
    color: white;
}

#about-us h3 {
    color: #ED1C24;
}

/* Footer */

footer{
    height: 50px;
}

.social-networks {
    text-align: center;
}

.social-networks > li {
    display: inline;
}

.social-networks i {
    font-size: 150%;
    margin: 1%;
    padding: 3%;
    color: #ED1C24;
}

/* Form */

.form-section {
    background: url(../images/gym-reception.jpg);
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    height: 750px;
    width: 100%;
    text-align: center;
}

#form-elements {
    background-color: rgba(0, 0, 0, .8);
    color: white;
    margin: 0 auto;
    height: 750px;
}

label {
    color: white;
    text-align: center;
}

.text-input {
    background: transparent;
    color: white;
    width: 20%;
    height: 25px;
    margin: 5px 0 20px 0;
    border: 1px solid #ED1C24;
    border-radius: 2px;
    text-align: center;
    padding: 4px;
}

.text-input-large {
    background: transparent;
    color: white;
    width: 60%;
    height: 100px;
    margin: 5px 0 20px 0;
    border: 1px solid #ED1C24;
    border-radius: 2px;
    text-align: center;
    padding: 4px;
}

#reason {
    margin: 10px 0 20px 0;
    border: 1px solid #ED1C24;
    border-radius: 2px;
    width: 20%;
    height: 25px;
    background: transparent;
    color: white;
    padding: 4px;
}

.submit-button {
    margin-top: 20px;
    border-radius: 2px;
    padding: 15px 32px;
    font-size: 100%;
    background-color: #ED1C24;
    color: white;
}

.submit-button:hover {
    background-color: white;
    color: #ED1C24;
}

/* Media queries */

/* For larger to medium screen size from 1200px and lower */

@media screen and (max-width: 1200px) {
    
    #logo {
        font-size: 200%;
    }

    .menu-select {
        flex-shrink: 1;
    }

    .menu-select:hover {
        font-size: 140%;
    }

    #cover-text {
        font-size: 100%;
        width: 250px;
        height: 300px;
        left: 40%;
    }

    #benefits-wrap {
        grid-template-columns: 50% 50%;
    }
    
    #classes {
        width: 100%;
        height: 1200px;
        margin: 0 auto;
        background-position: left;
    }
    
    .section-heading {
        padding: 30px 0;
        margin: 0;
    }

    #classes > div {
        width: 100%;
        clear: both;
        height: 200px;
        padding: 0%;
    }

    .form-section {
        height: 785px;
    }

    #form-elements {
        height: 785px;
    }

    .form-section h2 {
        font-size: 110%;
    }
}

/* Medium screen sizes from 950px wide and down */

@media screen and (max-width: 950px) {

    #logo {
        font-size: 170%;
    }
        
    #cover-text {
        left: 37%;
    }
    
/* Small screen sizes */

@media screen and (max-width: 800px) {
    
    #menu {
        flex-wrap: wrap;
        height: 100px;
        }

    #menu > div {
        width: 100%;
    }

    #menu > a {
        width: 15%;
    }

    #logo {
        order: 1;
    }

    .home-menu {
        order: 2;
        padding-bottom: 5px;
        text-align: center;
        font-size: 100%;
    }

    .classes-menu {
        order: 3;
        padding-bottom: 5px;
        text-align: center;
        font-size: 100%;
    }

    .enquires-menu {
        order: 4;
        padding-bottom: 5px;
        text-align: center;
        font-size: 100%;
    }

    .visit-menu {
        order: 5;
        padding-bottom: 5px;
        text-align: center;
        font-size: 100%;
    }
    
    #cover-text {
        left: 5%;
        font-size: 80%;
        top: 150px;
        height: 230px;
    }

    #treadmil-outer {
        height: 600px;
    }

    #treadmil-image {
        height: 600px;
    }

    #benefits-wrap {
        display: block;
        grid-template-columns: 100%;
    }

    #benefits-wrap h3 p {
        position: relative;
        margin: -3rem 0 2rem 1rem;
        padding: 1rem;
        background: rgba(255, 255, 255, 0.7);
    }

    #about-us {
        height: 380px;
    }

    #times {
        display: block;
        margin: 0 auto;
        text-align: center;
        float: none;
        padding-left: 0;
        padding-top: 10px;
        padding-bottom: 20px;
        background-color: rgba(0, 0, 0, .6);
    }

    #find {
        display: block;
        margin: 0 auto;
        text-align: center;
        float: none;
        padding-right: 0;
        padding-top: 10px;
        background-color: rgba(0, 0, 0, .6);
    }

    .form-section {
        height: 900px;
    }

    #form-elements {
        height: 900px;
    }

    .text-input {
        font-size: 80%;
        width: 80%;
    }

    .text-input-large {
        width: 80%;
    }

    #reason {
        width: 80%;
    }
}

